    - improve Cof logo (LP: #644686)
    - fix a crasher in the place activation (LP: #634364)
    - fixes favorite loading for didrocks (thanks!) (LP: #645835)
    - workaround translation issue for Unity trash (LP: #646653)
    - MT final adjustement for maverick (LP: #645848, #640501)
  * debian/control:
    - depend on latest unity-asset-pool

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 24 Sep 2010 18:51:42 +0200

unity (0.2.42-0ubuntu3) maverick; urgency=low

  * we need the .c file too (not automatically rebuilt) to fix crash on system
    indicators (LP: #645923)

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 23 Sep 2010 19:06:59 +0200

unity (0.2.42-0ubuntu2) maverick; urgency=low

  * Cherry pick from upstream bzr to avoid crash when clicking on system
    indicators (LP: #645923)

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 23 Sep 2010 14:27:39 +0200

unity (0.2.42-0ubuntu1) maverick; urgency=low

  * New upstream release:
    - "Applications" and "Files & Folders" tooltips are not translatable
      (LP: #644215)
    - Fix inactive menus are accessible on switching to a window (LP: #604505)
    - Fix wrong launcher tile label/quicklist x position (LP: #631446)
    - Fix highlighted items in quicklist have different widths (LP: #643315)
    - In migration tool, being safe when people are using crazy caracters in
      desktop file (LP: #644114, #635156)
    - Detect if 3D acceleration support is provided. Otherwise, prompt for
      logout and change default session (LP: #614088)
    - Fix quicklist shows hidden menu items (LP: #641543)
    - Fix removing launchers via dnd fails (LP: #643434)
    - Better launcher auto-scroll performances (LP: #640560)
    - Make the insensitive state of the forward- and back-button more obvious by
      decreasing their opacity, thus users don't assume they are actually
      clickable. (LP: #638285)
    - Fix some dialogs aren't maximized but are undecorated (LP: #628822)