@@ -9,6 +9,7 @@ unity (0.2.44-0ubuntu1) UNRELEASED; urgency=low
     - MT final adjustement for maverick (LP: #645848, #640501)
   * debian/control:
     - depend on latest unity-asset-pool
+  * backport fix to respect workspace layout
 
  -- Didier Roche <didrocks@ubuntu.com>  Fri, 24 Sep 2010 18:51:42 +0200
 
